--- a/index.html
+++ b/index.html
@@ -3,24 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍻</text></svg>">
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍻</text></svg>"
+    />
     <title>Apéro Clock</title>
     <script src="script.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="light-mode.css" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="dark-mode.css" media="(prefers-color-scheme: dark)">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="light-mode.css"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="stylesheet"
+      href="dark-mode.css"
+      media="(prefers-color-scheme: dark)"
+    />
   </head>
+
+  <header>
+    <button type="button" onclick="toggleTimeFormat()">12/24h</button>
+    <button type="button" onclick="toggleSeconds()">show/hide sec</button>
+    <button type="button" onclick="toggleLanguage()">en/fr</button>
+    <!--button onClick="toggleDarkMode()">☀️</button-->
+  </header>
+
   <body>
-    <div class="container">
-      <h1 id="clock"></h1>
-      <div id="date-and-time">
-        <p id="date-time"></p>
-        <p id="timezone"></p>
-      </div>
-      <button id="apero-button">🍺</button>
-      <div id="apero">
-        <p id="apero-status"></p>
-        <p id="apero-info"></p>
-      </div>
+    <div class="clock">
+      <div class="time" id="time"></div>
+      <div class="date" id="date"></div>
+      <div class="timezone" id="timezone"></div>
     </div>
+
+    <button type="button" onclick="showApero()" id="apero-button">🍺</button>
+
+    <div class="apero" id="apero">
+      <p class="apero-status" id="apero-status"></p>
+      <p id="apero-info"></p>
+    </div>
+  </body>
+
+  <footer>
+    <div class="links">
+      <a href="https://github.com/cletqui/apero"
+        ><img
+          class="link"
+          src="https://static.wixstatic.com/media/ca4433_484af6937eeb4da29bbef8af8d01c55a~mv2.png"
+          alt="GitHub"
+      /></a>
+    </div>
+  </footer>
 </html>
