--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <img class="icon" src="./icons/language.svg" alt="language" />
         </button>
       </div>
+
       <div class="menu-button">
         <img
           class="icon"
@@ -80,12 +81,18 @@
 
     <footer>
       <div class="link github">
-        <a href="https://github.com/cletqui/apero"
+        <a
+          href="https://github.com/cletqui/apero"
+          target="_blank"
+          rel="noopener noreferrer"
           ><img class="link" src="./icons/github.svg" alt="GitHub"
         /></a>
       </div>
       <div class="link bmac">
-        <a href="https://www.buymeacoffee.com/cletqui"
+        <a
+          href="https://www.buymeacoffee.com/cletqui"
+          target="_blank"
+          rel="noopener noreferrer"
           ><img class="link" src="./icons/coffee.svg" alt="GitHub"
         /></a>
       </div>
