--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍻</text></svg>"
     />
-    <title>Apéro Clock</title>
+    <title>Apéro Time</title>
     <script src="./js/script.js"></script>
     <link rel="stylesheet" href="./css/style.css" />
     <link
