--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
   </head>
 
   <body>
-    <header class="menu-hidden" id="header">
-      <div class="menu" id="menu">
+    <header id="header" class="menu-hidden">
+      <div id="menu" class="menu">
         <button type="button" onClick="toggleTheme()">
-          <img class="icon" src="./icons/moon.svg" id="theme" alt="theme" />
+          <img id="theme" class="icon" src="./icons/moon.svg" alt="theme" />
         </button>
         <button type="button" onclick="toggleSeconds()">
           <img
+            id="seconds-minutes"
             class="icon"
             src="./icons/stopwatch.svg"
-            id="seconds-minutes"
             alt="seconds-minutes"
           />
         </button>
         <button type="button" onclick="toggleLanguage()">
-          <img class="icon" src="./icons/language.svg" alt="language" />
+          <img class="icon" src="./icons/translate.svg" alt="language" />
         </button>
       </div>
 
       <div class="menu-button">
         <img
+          id="menu-button"
           class="icon"
           src="./icons/menu-burger.svg"
-          id="menu-button"
           alt="menu"
           onclick="showMenu()"
         />
@@ -48,36 +48,36 @@
 
     <main>
       <div class="clock">
-        <div class="time" id="time">00:00:00</div>
-        <div class="date" id="date">jeudi 1 janvier 1970</div>
-        <div class="timezone" id="timezone">(/)</div>
+        <div id="time" class="time">00:00:00</div>
+        <div id="date" class="date">jeudi 1 janvier 1970</div>
+        <div id="time-zone" class="time-zone">(/)</div>
       </div>
 
       <div class="apero-button">
-        <button type="button" onclick="showApero()">
+        <button type="button" onclick="showAperoLocal()">
           <img
-            class="icon"
-            src="./icons/beer.svg"
             id="apero-button"
+            class="icon"
+            src="./icons/interrogation.svg"
             alt="apero-button"
           />
         </button>
 
-        <button type="button" onclick="showWorld()">
+        <button type="button" onclick="showAperoWorld()">
           <img
+            id="world-button"
             class="icon"
             src="./icons/planet-ringed.svg"
-            id="world-button"
             alt="world-button"
           />
         </button>
       </div>
 
-      <div class="apero">
-        <p class="apero-status" id="apero-status">
+      <div class="apero-info">
+        <p id="apero-local" class="apero-info-hidden">
           No Javascript, no time, no beer!
         </p>
-        <p id="apero-info"></p>
+        <p id="apero-world" class="apero-info-hidden"></p>
       </div>
     </main>
 
@@ -97,7 +97,7 @@
           href="https://www.buymeacoffee.com/cletqui"
           target="_blank"
           rel="noopener noreferrer"
-          ><img class="link" src="./icons/coffee.svg" alt="GitHub"
+          ><img class="link" src="./icons/buy-me-a-coffee.svg" alt="GitHub"
         /></a>
       </div>
     </footer>
