--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             alt="theme"
           />
         </button>
+        <button type="button" id="full-screen-button">
+          <img
+            id="full-screen-icon"
+            class="icon"
+            src="./icons/compress.svg"
+            alt="full-screen"
+          />
+        </button>
         <button type="button" id="seconds-button">
           <img
             id="seconds-icon"
