--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header id="header" class="menu-hidden">
+    <header id="header">
       <div id="menu" class="menu">
         <button type="button" id="theme-button">
           <img
