--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img
             id="theme-icon"
             class="icon"
-            src="./icons/moon.svg"
+            src="./icons/sun.svg"
             alt="theme"
           />
         </button>
@@ -31,7 +31,7 @@
           <img
             id="full-screen-icon"
             class="icon"
-            src="./icons/compress.svg"
+            src="./icons/expand.svg"
             alt="full-screen"
           />
         </button>
@@ -39,7 +39,7 @@
           <img
             id="seconds-icon"
             class="icon"
-            src="./icons/stopwatch.svg"
+            src="./icons/clock-five.svg"
             alt="seconds-minutes"
           />
         </button>
